--- a/pages/about.html
+++ b/pages/about.html
@@ -41,7 +41,7 @@
             <a href="/pages/contact.html">Contact</a>
     </header>
 
-    <main>
+    <main class="mai">
       <h1 class="slogan">Let's work together!</h1>
       <div class="all">
         <div class="steps">
