--- a/pages/process.html
+++ b/pages/process.html
@@ -41,7 +41,7 @@
             <a href="/pages/contact.html">Contact</a>
     </header>
 
-    <main>
+    <main class="mai">
       <h1 class="slogan">This is how it works!</h1>
       <div class="all">
         <div class="steps">
